--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>prototypesDeprakash</title>
 </head>
 <body>
+    <h2 style="color:red">Hosting-Test-2</h2>
     <h1>Hello there im hosting this page with github</h1>
     <h1>this page is only for test purpose</h1>
     <h1>will this site works ?</h1>
