--- a/sample.html
+++ b/sample.html
@@ -27,6 +27,9 @@
     <h1 class="wd">Simple login system</h1>
     <br>
     <a href="jsgames/stroringdatawithjs/data.html"><button>Launch login system</button></a>
+     <h1 class="wd" >Applications developed</h1>
+    <h1 class="wd">Image searcher </h1>
+    <a href="image_searcher/image_search.html"><button>Launch image searcher</button></a>
 
     
     
