anchoring dictionary to existing html file

--- a/sample.html
+++ b/sample.html
@@ -30,6 +30,8 @@
      <h1 class="wd" >Applications developed</h1>
     <h1 class="wd">Image searcher </h1>
     <a href="image_searcher/image_search.html"><button>Launch image searcher</button></a>
+    <h1 class="wd">Dictionary web_app</h1>
+    <a href="dictionary/dictionary.html"><button>Launch dictionary web_app</button></a>
 
     
     
