adding_app_download_button
adding app download link in my portfolio

--- a/sample.html
+++ b/sample.html
@@ -32,6 +32,8 @@
     <a href="image_searcher/image_search.html"><button>Launch image searcher</button></a>
     <h1 class="wd">Dictionary web_app</h1>
     <a href="dictionary/dictionary.html"><button>Launch dictionary web_app</button></a>
+    <h1 class="wd">Android_App(only for testers) </h1>
+    <a href="https://drive.google.com/file/d/1v-y9btFm5Efmtj2qSRaLPxk8pFEaYGsp/view"><button>Download App</button></a>
 
     
     
