adding tic tac toe

--- a/sample.html
+++ b/sample.html
@@ -13,6 +13,7 @@
     <h1 class="wd">Web Game Made with <span class="js"> JavaScript</span> </h1>
     <br>
     <a href="jsgames/SnakeGame/snake.html"><button>Play Snake Xenzia</button></a><a href="jsgames/hitTheFly/click.html"><button>Play HitTheFly</button></a>
+    <a href="tictactoe/tictactoe.html"><button>Play Tic Tac Toe</button></a>
     
     <br><br>
     <h1 class="wd"> <span class="re">Parallax </span> Scrolling Website(made for blender)  </h1>
