--- a/query.html
+++ b/query.html
@@ -11,7 +11,8 @@
     <h1 class="hed" >Ask Your Questions</h1>
     <input id="mes" class="InpBox" type="text" placeholder="Write your Message Here!">
     <br>
-    <button onclick="submited()" class="sub">Submit!</button>
+    <a href="labhost/home.html"><button class="sub">Submit!</button></a>
+    
     <br>
     <h1 id="disp"></h1>
     <a href="index.html"><button class="bk">Back</button></a>
