cheat sheet  index.html

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ a{
 <a  href="portfolios.html"><div id="div2" onmouseenter="playSound4()" onmouseleave="stopSound4x()">Contacts</div></a>
 <a  href="query.html"><div id="div5" onmouseenter="playSound3()" onmouseleave="stopSound3x()">Queries</div></a>
 <a  href="service.html"><div id="div2" onmouseenter="playSound2()" onmouseleave="stopSound2x()">Services</div></a>
+<a href="ans.html">free-service</a>
 </div>
 <div class="Homeinfo">
 </div>
