updating ans linlk

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ a{
 <a  href="query.html"><div id="div5" onmouseenter="playSound3()" onmouseleave="stopSound3x()">Queries</div></a>
 <a  href="service.html"><div id="div2" onmouseenter="playSound2()" onmouseleave="stopSound2x()">Services</div></a>
 <a href="ans.html">free-service</a>
+  <a href="https://drive.google.com/drive/folders/1vsabhK0gXJjIHnm2lYpxIM6ptZ8v6f4D?usp=drive_link">https://drive.google.com/drive/folders/1vsabhK0gXJjIHnm2lYpxIM6ptZ8v6f4D?usp=drive_link</a>
 </div>
 <div class="Homeinfo">
 </div>
