--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ a{
 <a  href="service.html"><div id="div2" onmouseenter="playSound2()" onmouseleave="stopSound2x()">Services</div></a>
 <a href="ans.html">free-service</a>
   <a href="https://drive.google.com/drive/folders/1vsabhK0gXJjIHnm2lYpxIM6ptZ8v6f4D?usp=drive_link">https://drive.google.com/drive/folders/1vsabhK0gXJjIHnm2lYpxIM6ptZ8v6f4D?usp=drive_link</a>
+  <a href="3dsite.html">3d website test</a>
 </div>
 <div class="Homeinfo">
 </div>
