Updateing the css error

--- a/sqlwebsite.html
+++ b/sqlwebsite.html
@@ -7,6 +7,8 @@ var htmldb_Img_Dir = "/i/";
 //-->
 </script>
 <link rel="stylesheet" href="core.css" type="text/css" />
+ <link rel="stylesheet" href="htmldb_v2" type="text/css" />
+ <link rel="stylesheet" href="https://prototypesDeprakash.github.io/repository/htmldb_V2.css" type="text/css" />
 <script></script>
 <style type="text/css">
 <!-- 
