--- a/sqlwebsite.html
+++ b/sqlwebsite.html
@@ -7,9 +7,7 @@ var htmldb_Img_Dir = "/i/";
 //-->
 </script>
 <link rel="stylesheet" href="core.css" type="text/css" />
- <link rel="stylesheet" href="htmldb_v2" type="text/css" />
- <link rel="stylesheet" href="https://prototypesDeprakash.github.io/repository/htmldb_V2.css" type="text/css" />
-<script></script>
+ <link rel="stylesheet" href="htmldb_v2" type="css"/>
 <style type="text/css">
 <!-- 
 
@@ -22,7 +20,7 @@ span.noIndex{font-weight:bold;color:#ff0000;}
  -->
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" href="htmldb_V2.css" type="text/css" />
+<link rel="stylesheet" href="htmldb_v2.css" type="text/css" />
 
 </script>
 <title>SQL Commands</title>
