--- a/passwordpage.html
+++ b/passwordpage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-   <h2 class="mydit"> Please Don't misuse this site , its only for educational purpose , not for cheating  </h2>
+   <h2 class="mydit"> Please Don't misuse this site , its only for educational purpose , not for cheating <br> -- Prakash :) </h2>
 
    <h1 class="mydit"> Enter the code  </h1>
 
