--- a/ans.html
+++ b/ans.html
@@ -69,5 +69,6 @@
             </code>
         </pre>
      <a href="results.html"><button>download</button></a>
+    <a href="answers.txt"><button>view stuff</button></a>
 </body>
 </html>
