putting some style

--- a/index.html
+++ b/index.html
@@ -102,5 +102,9 @@ a{
    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; -prakash
   </h1>
 </div>
+   <div style="height: 600px;width:800px;">
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.35/build/spline-viewer.js"></script>
+    <spline-viewer url="https://prod.spline.design/2ckpzHnisDad48Wx/scene.splinecode"></spline-viewer>
+    </div>
 </body>
 </html>
