--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ a{
 </style>
 </head>
 <body>
-<div class="heading1"><h1 class="head1" onclick="bgsound()" >Unknownxxx<q> personal site </q>  </h1></div>
+<div class="heading1"><h1 class="head1" onclick="bgsound()" >Prakash's <q> Portfolio </q>  </h1></div>
+  <div>I am not responsible if anyone missuses this site , this site is my personal project and contains some cheats</div>
 <div class="buttonscollection">
 <div id="div1" onmouseenter="playSound()" onmouseleave="stopSoundx()" onclick="shoot()">Home</div>
 <a href="portfolios.html"><div id="div2" onmouseenter="playSound2()" onmouseleave="stopSound2x()" >Portfolios</div></a>
